--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation 'com.writingminds:FFmpegAndroid:0.3.2'
     implementation 'com.yahoo.mobile.client.android.util.rangeseekbar:rangeseekbar-library:0.1.0'
     implementation 'com.googlecode.mp4parser:isoparser:1.1.20'
+    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
+
 }
